--- a/views/index.erb
+++ b/views/index.erb
@@ -2,8 +2,15 @@
 <title>Battle</title>
  </head>
  <body>
-<form action="/names" method="post">
-  <input type="text" id="player-1">
-  <input type="text" id="player-2">
-  <input type="submit" value="Play">
+  <form action="/names" method="post">
+  <div>Player 1
+    <input type="text" id="player-1"> 
+  </div>
+  <div>Player 2
+    <input type="text" id="player-2">
+  </div>
+  <div>
+    <input type="submit" value="Play">
+  </div>
+  </form>
  </body>
