Created feature test to ensure player names are submitted and displayed, implemented passing code

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,10 @@
  <body>
   <form action="/names" method="post">
   <div>Player 1
-    <input type="text" id="player-1"> 
+    <input type="text" name="player_1"> 
   </div>
   <div>Player 2
-    <input type="text" id="player-2">
+    <input type="text" name="player_2">
   </div>
   <div>
     <input type="submit" value="Play">
