Added test helpers to DRY code

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,13 +1,7 @@
 
 <head><h1 style='text-align:center'>Play Battle</h1></head>
 
-<style>
-  td {
-    
-  }
-</style>
-
-<body>
+<body style="background-color:powderblue;">
 
   <table class='hp' style="width:30%;margin-left:auto;margin-right:auto">
     <tr style="text-align:center">
@@ -16,9 +10,9 @@
       <th><%= @player2 %></th>
     </tr>
     <tr style="text-align:center">
-      <td style="border: 1px solid black" name='p1_hp'>HP 000</td>
+      <td style="background-color:rgb(230, 198, 176);border: 1px solid black" name='p1_hp'>HP 000</td>
       <td></td>
-      <td style="border: 1px solid black" name='p2_hp'>HP 100</td>
+      <td style="background-color:rgb(206, 240, 174);border: 1px solid black" name='p2_hp'>HP 100</td>
     </tr>
   </table>
 </body>
