Introduced a Player attribute to track HP. Tested for default values, and a HP reducing attack. Implemented into controller and views

--- a/views/play.erb
+++ b/views/play.erb
@@ -14,9 +14,9 @@
       <th><%= @player2 %></th>
     </tr>
     <tr style="text-align:center">
-      <td style="background-color:rgb(230, 198, 176);border: 1px rgb(230, 198, 176)" name='p1_hp'>HP 000</td>
+      <td style="background-color:rgb(230, 198, 176);border: 1px rgb(230, 198, 176)" name='p1_hp'>HP <%= @player1_hp%></td>
       <td></td>
-      <td style="background-color:rgb(206, 240, 174);border: 1px rgb(206, 240, 174)" name='p2_hp'>HP 100</td>
+      <td style="background-color:rgb(206, 240, 174);border: 1px rgb(206, 240, 174)" name='p2_hp'>HP <%= @player2_hp%></td>
     </tr>
   </table>
   <br>
