--- a/views/play.erb
+++ b/views/play.erb
@@ -9,14 +9,14 @@
 
   <table class='hp' style="width:30%;margin-left:auto;margin-right:auto">
     <tr style="text-align:center">
-      <th><%= @player1 %></th>
+      <th><%= @game.player1.name %></th>
       <th>v</th>
-      <th><%= @player2 %></th>
+      <th><%= @game.player2.name %></th>
     </tr>
     <tr style="text-align:center">
-      <td style="background-color:rgb(230, 198, 176);border: 1px rgb(230, 198, 176)" name='p1_hp'>HP <%= @player1_hp%></td>
+      <td style="background-color:rgb(230, 198, 176);border: 1px rgb(230, 198, 176)" name='p1_hp'>HP <%= @game.player1.hp%></td>
       <td></td>
-      <td style="background-color:rgb(206, 240, 174);border: 1px rgb(206, 240, 174)" name='p2_hp'>HP <%= @player2_hp%></td>
+      <td style="background-color:rgb(206, 240, 174);border: 1px rgb(206, 240, 174)" name='p2_hp'>HP <%= @game.player2.hp%></td>
     </tr>
   </table>
   <br>
