Written tests to track players turn after each attack move and display onscreen

--- a/views/play.erb
+++ b/views/play.erb
@@ -2,7 +2,7 @@
 <head><h1 style='text-align:center'>Play Battle</h1></head>
 <br>
 <br>
-<h3 style='text-align:center;color:rgb(230, 80, 80)'><%= @message%></h3>
+<h3 style='text-align:center;color:rgb(230, 80, 80)'><%= @arena_message%></h3>
 <br>
 <br>
 <body style="background-color:powderblue;">
@@ -26,3 +26,6 @@
   </form>
   </div>
 </body>
+
+
+<h4 style='text-align:center;color:rgb(230, 80, 80)'><%= @turn_message%></h4>
